plugins {
    id 'dev.architectury.loom' version '1.13.459' apply false
    id 'architectury-plugin' version '3.4.162'
    id 'com.gradleup.shadow' version '9.2.2' apply false
    id 'io.papermc.paperweight.userdev' version '2.0.0-beta.19' apply false
}

architectury {
    minecraft = project.minecraft_version
}

allprojects {
    group = rootProject.maven_group
    version = rootProject.mod_version + "+" + rootProject.minecraft_version_range

    configurations.configureEach {
        resolutionStrategy.eachDependency { details ->
            if (details.requested.group == "net.neoforged.accesstransformers"
                    && details.requested.name == "at-cli") {
                details.useVersion("11.0.2")
                details.because("NeoForge 21.11.0-beta resolves at-cli 10.0.2 without the required at-parser runtime class.")
            }
            if (details.requested.group == "net.neoforged"
                    && details.requested.name == "accesstransformers") {
                details.useVersion("11.0.2")
                details.because("Keep the access transformer runtime aligned with at-cli 11.0.2.")
            }
        }
    }

    dependencies {
        components {
            withModule("net.neoforged.accesstransformers:at-cli") {
                allVariants {
                    withDependencies {
                        add("net.neoforged.accesstransformers:at-parser:13.0.3")
                    }
                }
            }
            withModule("net.neoforged:accesstransformers") {
                allVariants {
                    withDependencies {
                        add("net.neoforged.accesstransformers:at-parser:13.0.3")
                    }
                }
            }
        }
    }
}

configure(subprojects.findAll { it.name != 'paper' }) {
    apply plugin: 'dev.architectury.loom'
    apply plugin: 'architectury-plugin'
    apply plugin: 'com.gradleup.shadow'
    apply plugin: 'maven-publish'

    base {
        // Set up a suffixed format for the mod jar names, e.g. `example-fabric`.
        archivesName = "$rootProject.archives_name-$project.name"
    }

    repositories {
        mavenLocal()
        maven {
            name = "Fuzs Mod Resources"
            url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/"
        }
        maven {
            name = "Terraformers"
            url = "https://maven.terraformersmc.com/"
        }
        maven {
            name "IzzelAliz Maven"
            url "https://maven.izzel.io/releases/"
        }
        maven {
            name "ParchmentMC"
            url "https://maven.parchmentmc.org/"
        }
        maven {
            name "JitPack"
            url 'https://jitpack.io'
        }
        flatDir{// You need to put ModernUI-mVus fork into this dir
            dir "$projectDir/libs"
        }
    }

    loom {
        silentMojangMappingsLicense()
    }

    dependencies {
        minecraft "net.minecraft:minecraft:$rootProject.minecraft_version"
        mappings loom.officialMojangMappings()
        compileOnly "org.projectlombok:lombok:$rootProject.lombok_version" // Add Lombok for compilation
        annotationProcessor "org.projectlombok:lombok:$rootProject.lombok_version" // Enable annotation processing
        testCompileOnly "org.projectlombok:lombok:$rootProject.lombok_version" // For test sources
        testAnnotationProcessor "org.projectlombok:lombok:$rootProject.lombok_version"
        testImplementation "org.junit.jupiter:junit-jupiter:$rootProject.junit_version"
        testRuntimeOnly "org.junit.platform:junit-platform-launcher"
        implementation "icyllis.modernui:ModernUI-Core:$rootProject.modernui_version"
        implementation("icyllis.modernui:ModernUI-Markflow:$rootProject.modernui_version") {
//            exclude group: "icyllis.modernui", module: "ModernUI-Core"
        }
    }

    java {
        // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
        // if it is present.
        // If you remove this line, sources will not be generated.
        withSourcesJar()

        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 21
    }

    // Configure Maven publishing.
    publishing {
        publications {
            mavenJava(MavenPublication) {
                artifactId = base.archivesName.get()
                from components.java
            }
        }

        // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
        repositories {
            // Add repositories to publish to here.
            // Notice: This block does NOT have the same function as the block in the top level.
            // The repositories here will be used for publishing your artifact, not for
            // retrieving dependencies.
        }
    }
}
